feat: created login page

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,8 @@ $primary-color:#7001FD;
 $secondary-color: #1E2772;
 $text-color: #555555;
 $gray-background: #EEEEEE;
-;
+$input-backgroud: #F1F3F6;
+
 
 
 
